# SoftwareRenderer

./: .gitmodules  CMakeLists.txt
source/: .clang-format  CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.h
